--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
       - "80:8080"
     volumes_from:
       - frontend-app-data
-    command: npm run dev
+    command: npm run dev # npm run build to use built version - this does not work yet. Webpack reconfiguration required
 
 
   ####################################
